Prevent the title and caption from overlapping the legend

--- a/src/css/vega_chart_legend.scss
+++ b/src/css/vega_chart_legend.scss
@@ -2,6 +2,7 @@
   position: absolute;
   top: 25px; // Aligned with the title
   right: 20px;
+  z-index: 3; // To be on top of title/caption
 
   .toggle-button {
     display: flex;
